--- a/idex.html
+++ b/idex.html
@@ -5,28 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de login</title>
     <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,200,0,-25" />
     <link rel="stylesheet" href="estilos/login.css">
+    <link rel="stylesheet" href="estilos/medias-queries.css">
 </head>
 <body>
     <main>
         <section id="login">
             <div id="imagem">
-
             </div>
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Seja bem vindo (a)!</p>
-                <p>Insira seu login e senha.&#128272; </p>
-                    <form action="login.php" autocomplete="on" method="post">
-                        <p><label for="imail">E-mail:</label></p>
-                        <input type="text" name="email" id="iemail" required>
-                        <p><label for="isenha">Senha:</label></p>
-                        <input type="password" name="senha" id="isenha" required minlength="8">
-                        <p>
-                            <input type="submit" value="Enviar">
-                            <input type="reset" value="Limpar">
-                        </p>
-                    </form>
+                <p>Seja bem vindo (a). Insira seu login e senha.</p>
+                <form action="login.php" autocomplete="on" method="post">
+                    <div class="campo">
+                        <span class="material-symbols-outlined">person</span>
+                        <label for="ilogin">Login:</label>
+                        <input type="email" name="login" id="ilogin" required placeholder="seu e-mail" autocomplete="email" maxlength="6">
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">key</span>
+                        <label for="isenha">Senha:</label>
+                        <input type="password" name="senha" id="isenha" required minlength="8" placeholder="sua senha" autocapitalize="current-password">                      
+                    </div>
+                    <input type="submit" value="Enviar">
+                    <a href="esqueci.html">
+                        Esqueci a senha <span class="material-symbols-outlined">mail</span>
+                    </a>
+                    <input type="reset" value="Limpar">
+                </form>
             </div>
         </section>
     </main>
