--- a/idex.html
+++ b/idex.html
@@ -26,13 +26,12 @@
                     <div class="campo">
                         <span class="material-symbols-outlined">key</span>
                         <label for="isenha">Senha:</label>
-                        <input type="password" name="senha" id="isenha" required minlength="8" placeholder="sua senha" autocapitalize="current-password">                      
+                        <input type="password" name="senha" id="isenha" required minlength="8" placeholder="sua senha" autocapitalize="current-password">
                     </div>
                     <input type="submit" value="Enviar">
-                    <a href="esqueci.html">
+                    <a href="esqueci.html" class="botao">
                         Esqueci a senha <span class="material-symbols-outlined">mail</span>
                     </a>
-                    <input type="reset" value="Limpar">
                 </form>
             </div>
         </section>
